# sql-intelliscan

./: .gitignore  Cargo.toml  README.md  Trunk.toml  agents.md  build.rs  package.json  styles.css  tailwind.config.js  webdriver.json
.codex/: rules.md
.github/workflows/: buildtest.yml
application/: Cargo.toml
application/src/: lib.rs
business/: Cargo.toml
business/src/: lib.rs
crates/sql-intelliscan-common/: Cargo.toml
crates/sql-intelliscan-common/src/: common.rs  lib.rs
crates/sql-intelliscan-common/tests/: common.rs
crates/sql-intelliscan-repository/: Cargo.toml
crates/sql-intelliscan-repository/src/: lib.rs  repository.rs
crates/sql-intelliscan-repository/tests/: integration_sql_server.rs  repository.rs  sql_server_connection_config.rs
crates/sql-intelliscan-services/: Cargo.toml
docs/: backend-test-coverage-plan.md
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
integration/: Cargo.toml
integration/src/: lib.rs
persistence/: Cargo.toml
persistence/src/: lib.rs
presentation/: Cargo.toml
presentation/src/: lib.rs
repository/: Cargo.toml
repository/src/: lib.rs
scripts/: check-coverage.py  trunk.js  wasm-test-local.sh
scripts/sql-server/: real-test-setup.sql
shared/: Cargo.toml
shared/src/: lib.rs
src/: app.rs  app_wasm.rs  lib.rs  main.rs
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  (+3 more)
src-tauri/tests/: backend_contracts.rs
src/components/: app.rs
src/services/: connection_service.rs  greeting_service.rs  mod.rs  tauri_client.rs
tests/: backend.rs  frontend.rs  integration.rs
tests/backend/: app_state.rs  commands.rs  lib.rs  main.rs  response_models.rs  service_registry.rs
tests/frontend/: app.rs  app_test.rs  connection_service.rs  greeting_service.rs  native_app_test.rs  tauri_client.rs
(+54 files in other folders)
