[package]
name = "sql-intelliscan-ui"
version = "0.1.0"
edition = "2021"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8.19", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"

[features]
default = ["csr"]
csr = ["leptos/csr"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
leptos = { version = "0.8.19", features = ["ssr"] }
sql_intelliscan_lib = { path = "src-tauri", package = "sql-intelliscan" }
tauri = { version = "2", features = [] }

[workspace]
members = [
    "src-tauri",
    "shared",
    "business",
    "repository",
    "persistence",
    "integration",
    "infrastructure",
    "application",
    "presentation",
]

[[test]]
name = "frontend"
path = "tests/frontend.rs"

[[test]]
name = "backend"
path = "tests/backend.rs"
